--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,34 @@
-
-AdminBack/obj/
-
 *.vsidx
-
-.vs/AdminBack/v17/.suo
-
-.vs/AdminBack/v17/DocumentLayout.json
+*.suo
+*.backup
+*.user
+*.dbmdl
+*.pptx
+*.psess
+*.orig
+*.xml
+*.~vsd
+*.zip
+*.sublime-project
+*.sublime-workspace
+*.exe
+*.avi
+*.mp4
+*.mov
+*.rar
+*.mdf
+*.ldf
+**/nuspec.list
+**/packages/
+**/.sass-cache/
+**/node_modules/
+**/bower_components/
+*/Performance/*TestResults.txt
+**/bin
+**/obj
+*/.log.1
+*/.log.*
+*.log
+*.db
+.vs/
+Publish/
