--- a/AdminBack/appsettings.json
+++ b/AdminBack/appsettings.json
@@ -1,9 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "JwtSettings": {
+        "Secret": "clave_super_secreta_para_el_token",
+        "Issuer": "AdminBackAPI",
+        "Audience": "AdminBackClients",
+        "ExpiresInMinutes": 60 //minutos
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Port=5432;Database=databaseADMIN;Username=postgres;Password=1234"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
