--- a/AdminBack/appsettings.json
+++ b/AdminBack/appsettings.json
@@ -14,5 +14,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "MongoSettings": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "Database": "SCM"
+    },
     "AllowedHosts": "*"
 }
