ADD: Conexion con base de datos

--- a/AdminBack/appsettings.json
+++ b/AdminBack/appsettings.json
@@ -1,12 +1,12 @@
 {
     "JwtSettings": {
-        "Secret": "clave_super_secreta_para_el_token",
+        "Secret": "proyectoADMINTI",
         "Issuer": "AdminBackAPI",
         "Audience": "AdminBackClients",
         "ExpiresInMinutes": 60 //minutos
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=databaseADMIN;Username=postgres;Password=1234"
+        "DefaultConnection": "Host=52.14.60.56;Port=5432;Database=adminti_scm;Username=postgres;Password=admin2025"
     },
     "Logging": {
         "LogLevel": {
