--- a/AdminBack/appsettings.json
+++ b/AdminBack/appsettings.json
@@ -1,6 +1,6 @@
 {
     "JwtSettings": {
-        "Secret": "proyectoADMINTI",
+        "Secret": "clave_proyecto_adminti_12345678123123123123",
         "Issuer": "AdminBackAPI",
         "Audience": "AdminBackClients",
         "ExpiresInMinutes": 60 //minutos
@@ -15,7 +15,7 @@
         }
     },
     "MongoSettings": {
-        "ConnectionString": "mongodb://localhost:27017",
+        "ConnectionString": "mongodb://52.14.60.56:27017",
         "Database": "SCM"
     },
     "AllowedHosts": "*"
